--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<a href="./coc/index.html">coc专区</a><br/>
 		<label>wow专区(停开)</label><br/>
 		<a href="./wuxia/index.html">天刀专区</a>
+		<a href="./tools/index.html">其他工具</a>
 		
 
 
