--- a/wuxia/tianshang.html
+++ b/wuxia/tianshang.html
@@ -30,7 +30,7 @@
 			<input type="number" id="sale2" />
 		</div>
 		<button onclick="calc()">计算</button><br />
-		<a href="index.html">返回主页</a>
+		<a href="../index.html">返回主页</a>
 	</body>
 
 	<script>
