--- a/wuxia/tianshang.html
+++ b/wuxia/tianshang.html
@@ -25,7 +25,7 @@
 			<input type="number" id="sale" />
 		</div>
 		
-		<label>Q币重置折扣（百分比）：</label>
+		<label>Q币充值折扣（百分比）：</label>
 		<div>
 			<input type="number" id="sale2" />
 		</div>
