--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<link rel="stylesheet" href="common/css/4261202.css" />
 	</head>
 	<body>
-		<h1>小工具合集</h1>
+		<h1>工具</h1>
 		<p>简介：</p>
-		<p>个人身为游戏迷会碰到收益计算问题，只为节省时间</p>
+		<p>计算收益，只为节省时间</p>
 		<a href="./coc/index.html">coc专区</a><br/>
 		<label>wow专区(停开)</label><br/>
 		<a href="./wuxia/index.html">天刀专区</a><br/>
