--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 		<link rel="stylesheet" href="common/css/4261202.css" />
 	</head>
 	<body>
-		<h1>工具</h1>
-		<p>简介：</p>
-		<p>计算收益，只为节省时间</p>
-		<a href="./coc/index.html">coc专区</a><br/>
-		<label>wow专区(停开)</label><br/>
+		<h1>资料&工具</h1>
+		<!--<p>个人身为游戏迷会碰到收益计算问题，只为节省时间</p>-->
 		<a href="./wuxia/index.html">天刀专区</a><br/>
+		<label>wow专区(停开)</label><br/>
+		<a href="./coc/index.html">coc专区</a><br/>
 		<a href="./tools/index.html">其他工具</a>
 		
 
