--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -7,26 +7,6 @@
 	</head>
 	<link rel="stylesheet" href="../common/css/4261202.css" />
 	<style>
-		/*#outDiv {
-			text-align: center;
-			margin: 0 auto;
-			padding: 0;
-			clear: both;
-		}
-		
-		.inDiv {
-			margin: 0;
-			border: 2px solid #33F;
-			width: 150px;
-			height: 200px;
-			padding: 0;
-			display: inline-block;
-			_display: inline;
-			*display: inline;
-			zoom: 1;
-		}*/
-		
-
 	</style>
 
 	<body>
@@ -39,16 +19,16 @@
 				<h3>心法资料</h3>
 				<a href="img/41c2f45230bae3333d4ea2c2101bb7f485c50c50_raw.jpg">心法砭石</a><br />
 				<a href="img/5b160a6554c34fdabb68313a9f6ae81c07f9079c_raw.jpg">心法潜修</a><br />
-				<a href="img/89fc773442feb22cef742c481f7388a3b37fedb0_raw.jpg">心法属性</a>
+				<a href="img/89fc773442feb22cef742c481f7388a3b37fedb0_raw.jpg">心法属性</a><br />
+				<a href="">洞见</a><br />
 			</div>
 			<div class="inDiv ">
 				<h3>装备</h3>
 				<a href="img/ce7bda9987ea4f5075672d297ea9a27070f83251_raw.jpg">词缀属性</a><br />
-				<a href="img/d01f41fdd1ee8e815997e80ecb1bd8f8e2076926_raw.jpg">词缀部位</a>
+				<a href="img/d01f41fdd1ee8e815997e80ecb1bd8f8e2076926_raw.jpg">词缀部位</a><br />
 			</div>
 			<div class="inDiv ">
 				<h3>乐伶/文士专区</h3>
-
 				<a href="literateri/collection.html ">书画采集点</a><br />
 				<a href="literateri/opern.html " style="width: 200px; ">自由曲谱</a><br/>
 				
@@ -56,6 +36,11 @@
 			<div class="inDiv ">
 				<h3>航海专区</h3>
 				<a href="img/image002_S.jpg">流行货物</a><br />
+				<a href="navig/handbook.html">航海图鉴</a><br />
+			</div>
+			<div class="inDiv ">
+				<h3>小师妹</h3>
+				<a href="junsister/小师妹侠誉图清单.xlsx" download="xiayutu">侠誉图</a><br />
 			</div>
 		</div>
 
