--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -20,7 +20,7 @@
 				<a href="img/41c2f45230bae3333d4ea2c2101bb7f485c50c50_raw.jpg">心法砭石</a><br />
 				<a href="img/5b160a6554c34fdabb68313a9f6ae81c07f9079c_raw.jpg">心法潜修</a><br />
 				<a href="img/89fc773442feb22cef742c481f7388a3b37fedb0_raw.jpg">心法属性</a><br />
-				<a href="">洞见</a><br />
+				<a href="xinfa/dongjian.html">洞见</a><br />
 			</div>
 			<div class="inDiv ">
 				<h3>装备</h3>
