--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -37,10 +37,16 @@
 				<h3>航海专区</h3>
 				<a href="img/image002_S.jpg">流行货物</a><br />
 				<a href="navig/handbook.html">航海图鉴</a><br />
+				<a href="navig/explore.html">航海探索</a><br />
 			</div>
 			<div class="inDiv ">
 				<h3>小师妹</h3>
-				<a href="junsister/小师妹侠誉图清单.xlsx" download="xiayutu">侠誉图</a><br />
+				<a href="junsister/小师妹侠誉图清单.xlsx">侠誉图</a><br />
+				<a href="https://wuxia.gamebbs.qq.com/forum.php?mod=viewthread&tid=434037">历练攻略链接</a><br />
+			</div>
+			<div class="inDiv ">
+				<h3>神兵</h3>
+				<a href="https://www.bilibili.com/read/cv2653217/">攻略链接</a><br />
 			</div>
 		</div>
 
