--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -27,17 +27,23 @@
 				<a href="img/ce7bda9987ea4f5075672d297ea9a27070f83251_raw.jpg">词缀属性</a><br />
 				<a href="img/d01f41fdd1ee8e815997e80ecb1bd8f8e2076926_raw.jpg">词缀部位</a><br />
 			</div>
-			<div class="inDiv ">
-				<h3>乐伶/文士专区</h3>
-				<a href="literateri/collection.html ">书画采集点</a><br />
-				<a href="literateri/opern.html " style="width: 200px; ">自由曲谱</a><br/>
-				
-			</div>
+			
 			<div class="inDiv ">
 				<h3>航海专区</h3>
 				<a href="img/image002_S.jpg">流行货物</a><br />
 				<a href="navig/handbook.html">航海图鉴</a><br />
 				<a href="navig/explore.html">航海探索</a><br />
+			</div>
+		</div>
+		<div id="outDiv">
+			<div class="inDiv ">
+				<h3>家园&别业</h3>
+				<a href="home/collection.html">别业家具抄录</a><br />
+			</div>
+			<div class="inDiv ">
+				<h3>乐伶/文士专区</h3>
+				<a href="literateri/collection.html ">书画采集点</a><br />
+				<a href="literateri/opern.html " style="width: 200px; ">自由曲谱</a><br/>
 			</div>
 			<div class="inDiv ">
 				<h3>小师妹</h3>
