--- a/tools/pwdGenerate.html
+++ b/tools/pwdGenerate.html
@@ -2,7 +2,7 @@
  <head> 
   <title>随机密码生成</title> 
  </head> 
- <link rel="stylesheet" href="common/css/4261202.css" />
+ <link rel="stylesheet" href="../common/css/4261202.css" />
  <body> 
   <button onclick="javascript:generate()">随机生成</button> 
   <div id="password"></div> 
