--- a/tools/pwdGenerate.html
+++ b/tools/pwdGenerate.html
@@ -5,7 +5,7 @@
  <link rel="stylesheet" href="../common/css/4261202.css" />
  <body> 
   <button onclick="javascript:generate()">随机生成</button> 
-  <div id="password"></div> 
+  <div><p id="password"></p></div> 
   <script type="text/javascript">
 		Array.prototype.shuffle = function() {
 		 	let arr = this,
