--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -16,32 +16,44 @@
 				<a href="tianshang.html ">天赏积分代购计算</a>
 			</div>
 			<div class="inDiv ">
-				<h3>心法资料</h3>
+				<h3>心法</h3>
 				<a href="img/41c2f45230bae3333d4ea2c2101bb7f485c50c50_raw.jpg">心法砭石</a><br />
 				<a href="img/5b160a6554c34fdabb68313a9f6ae81c07f9079c_raw.jpg">心法潜修</a><br />
 				<a href="img/89fc773442feb22cef742c481f7388a3b37fedb0_raw.jpg">心法属性</a><br />
+				<a href="xinfa/img/ability.png">心法功能</a><br />
 				<a href="xinfa/dongjian.html">洞见</a><br />
+			</div>
+			<div class="inDiv ">
+				<h3>砭石</h3>
+				<a href="bianshi/source.html">砭石属性&掉落</a><br />
 			</div>
 			<div class="inDiv ">
 				<h3>装备</h3>
 				<a href="img/ce7bda9987ea4f5075672d297ea9a27070f83251_raw.jpg">词缀属性</a><br />
 				<a href="img/d01f41fdd1ee8e815997e80ecb1bd8f8e2076926_raw.jpg">词缀部位</a><br />
 			</div>
-			
 			<div class="inDiv ">
-				<h3>航海专区</h3>
+				<h3>航海</h3>
 				<a href="img/image002_S.jpg">流行货物</a><br />
 				<a href="navig/handbook.html">航海图鉴</a><br />
 				<a href="navig/explore.html">航海探索</a><br />
 			</div>
+			<div class="inDiv ">
+				<h3>琅纹</h3>
+				<a href="langwen/bonus.html">属性&消耗</a><br />
+			</div>
 		</div>
 		<div id="outDiv">
+			<div class="inDiv ">
+				<h3>门派</h3>
+				<a href="role/img/bonus.png">属性加成</a><br />
+			</div>
 			<div class="inDiv ">
 				<h3>家园&别业</h3>
 				<a href="home/collection.html">别业家具抄录</a><br />
 			</div>
 			<div class="inDiv ">
-				<h3>乐伶/文士专区</h3>
+				<h3>乐伶&文士</h3>
 				<a href="literateri/collection.html ">书画采集点</a><br />
 				<a href="literateri/opern.html " style="width: 200px; ">自由曲谱</a><br/>
 			</div>
