--- a/wuxia/bianshi/source.html
+++ b/wuxia/bianshi/source.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>砭石属性&掉落</title>
+		<title>砭石属性&兑换</title>
 	</head>
 	<link rel="stylesheet" type="text/css" href="../../common/css/4261202.css"/>
 	<body>
-		<h2>砭石属性&掉落</h2>
+		<h2>砭石属性&兑换</h2>
 		<div><img src="img/bianshi.png"/></div>
 	</body>
 </html>
