--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="inDiv ">
 				<h3>砭石</h3>
-				<a href="bianshi/source.html">砭石属性&掉落</a><br />
+				<a href="bianshi/source.html">砭石属性&兑换</a><br />
 			</div>
 			<div class="inDiv ">
 				<h3>装备</h3>
@@ -41,6 +41,7 @@
 			<div class="inDiv ">
 				<h3>琅纹</h3>
 				<a href="langwen/bonus.html">属性&消耗</a><br />
+				<a href="langwen/set.html">共鸣</a><br />
 			</div>
 		</div>
 		<div id="outDiv">
