--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -52,6 +52,9 @@
 			<div class="inDiv ">
 				<h3>家园&别业</h3>
 				<a href="home/collection.html">别业家具抄录</a><br />
+				<a href="https://wuxia.qq.com/news_detail.html?newsid=14699345">茶话会奖励和开启流程链接</a><br />
+				<a href="https://wuxia.qq.com/news_detail.html?newsid=14696017">茶话会玩法流程介绍链接</a><br />
+				<a href="https://wuxia.qq.com/news_detail.html?newsid=14688651">家园别业玩法详解链接</a><br />
 			</div>
 			<div class="inDiv ">
 				<h3>乐伶&文士</h3>
