--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -48,6 +48,7 @@
 			<div class="inDiv ">
 				<h3>门派</h3>
 				<a href="role/img/bonus.png">属性加成</a><br />
+				<a href="role/guide.html">门派选择</a>
 			</div>
 			<div class="inDiv ">
 				<h3>家园&别业</h3>
