--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -31,6 +31,7 @@
 				<h3>装备</h3>
 				<a href="img/ce7bda9987ea4f5075672d297ea9a27070f83251_raw.jpg">词缀属性</a><br />
 				<a href="img/d01f41fdd1ee8e815997e80ecb1bd8f8e2076926_raw.jpg">词缀部位</a><br />
+				<a href="equipment/longzhu.html">珑铸</a>
 			</div>
 			<div class="inDiv ">
 				<h3>航海</h3>
