--- a/wuxia/index.html
+++ b/wuxia/index.html
@@ -72,6 +72,10 @@
 				<h3>神兵</h3>
 				<a href="https://www.bilibili.com/read/cv2653217/">攻略链接</a><br />
 			</div>
+			<div class="inDiv ">
+				<h3>官网功能</h3>
+				<a href="officialWebsite/penaltyRelief.html">处罚自助减免</a>
+			</div>
 		</div>
 
 	</body>
