--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<h1>资料&工具</h1>
 		<!--<p>个人身为游戏迷会碰到收益计算问题，只为节省时间</p>-->
 		<a href="./wuxia/index.html">天刀专区</a><br/>
-		<label>wow专区(更新中)</label><br/>
+		<a href="warframe/index.html">warframe</a><br />
+		<!--<label>wow专区(更新中)</label><br/>-->
+		
 		<a href="./tools/index.html">其他工具</a>
 	</body>
 </html>
