--- a/warframe/index.html
+++ b/warframe/index.html
@@ -15,9 +15,9 @@
 				<a href="https://riven.market" id="wfa">wfa - 紫卡市场</a><br />
 			</div>
 			<div class="inDiv">
-				<h3>中文灰机</h3>
+				<h3>虚空遗物</h3>
 				<a href="https://warframe.huijiwiki.com/wiki/%E8%99%9A%E7%A9%BA%E9%81%97%E7%89%A9/%E5%A5%96%E5%8A%B1%E8%A1%A8/%E4%BB%A5%E5%A5%96%E5%8A%B1%E5%88%92%E5%88%86">虚空遗物/奖励表/以奖励划分</a>
-
+				<a href="voidRelic/getSource.html">遗物获取推荐</a>
 			</div>
 		</div>
 	</body>
