--- a/warframe/voidRelic/getSource.html
+++ b/warframe/voidRelic/getSource.html
@@ -12,6 +12,10 @@
 			display: block;
 			margin-left: 50px;
 		}
+		.mod-img{
+			width: 1080px;
+    		height: 440px;
+		}
 	</style>
 
 	<body>
@@ -27,8 +31,11 @@
 		<p>捕获就不做阐述</p>
 		<strong>木星-IO</strong>
 		<p>IO为防御地图，使用地图炮快速清怪，前两波高概率出前纪（5波一轮），需自备井盖或Z冲回蓝。刷之前记得开单人</p>
-		<p>战甲推荐：Banshee（集团4）   范围>强度>效率。无需持续</p>
-		<p>ps:IO地图改版后效率下降了，但是还是可以刷一刷</p>
+		<p>战甲推荐：Banshee（集团4）   范围>强度>效率。无需持续。 </p>
+		<p>ps:1.没有音妈，其它地图炮也可以。IO地图改版后效率下降了，但是还是可以刷一刷</p>
+		<img src="../img/IO1.png" class="mod-img"/>
+		<img src="../img/IO2.png" class="mod-img"/>
+		<img src="../img/IO3.png" class="mod-img"/>
 		<hr />
 		<h3>中纪 - Neo</h3>
 		<strong>虚空捕获</strong>
@@ -36,15 +43,19 @@
 		<strong>塞德娜-拦截</strong>
 		<p>寻找两个控制台中心点开3技能。原理：怪触碰控制台才可以夺回控制权，3技能范围高了之后将两个控制台会在范围内，怪自动走上去会拖下水。挂机时间与战甲投入成正比。</p>
 		<p>奖励前两轮高概率中纪，后两轮高概率后纪。推荐组队刷</p>
-		<p>战甲推荐：Hydroid  范围>效率>能量上限。无需强度和持续</p>
+		<p>战甲推荐：Hydroid  范围>效率>能量上限。适当的强度，无需持续</p>
+		<img src="../img/PZ.png" class="mod-img"/>
 		<hr />
 		<h3>后纪 - Axi</h3>
 		<strong>塞德娜-拦截</strong>
 		<p>同中纪，不做阐述</p>
 		<strong>月球-中断</strong>
 		<p>通过卡阶段奖励的方式拿后纪核桃，规律为4321111111。即第一轮只保护4个，第二轮保护3个，第三轮只保护2个，后面开始保护1个，每次奖励结算时都是后纪核桃，打的越久效率越快。单人/组队都行</p>
-		<p>战甲推荐：打低波随便带，高波生存就成了问题，建议Inaros+N精+一把热门近战武器。沙甲保证生存，近战武器保证伤害</p>
-		<p>关于配置推荐请自行去B站看吧</p>
+		<p>战甲推荐：打低波随便带，高波生存就成了问题，建议Inaros+N精+一把热门近战武器+一把扒皮副手。沙甲保证生存，近战武器保证伤害</p>
+		<p>配置多样推荐请自行去B站看吧</p>
+		<img src="../img/YZD1.png" class="mod-img"/>
+		<img src="../img/YZD2.png" class="mod-img"/>
+		<img src="../img/YZD3.png" class="mod-img"/>
 		<hr />
 		<h3>地球、金星赏金任务</h3>
 		<p>各类核桃都有，地球和金星赏金任务刷中纪、后纪核桃还是算不错的，顺便还能拿一下平原声望（少年，早晚要肝的）</p>
