--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!--<p>个人身为游戏迷会碰到收益计算问题，只为节省时间</p>-->
 		<a href="./wuxia/index.html">天刀专区</a><br/>
 		<a href="warframe/index.html">warframe</a><br />
-		<a href="pz_wiki/index.html">warframe</a><br />
+		<a href="pz_wiki/index.html">ProjectZomboid</a><br />
 		<!--<label>wow专区(更新中)</label><br/>-->
 		
 		<a href="./tools/index.html">其他工具</a>
