--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<a href="./wuxia/index.html">天刀专区</a><br/>
 		<a href="warframe/index.html">warframe</a><br />
 		<a href="pz_wiki/index.html">ProjectZomboid</a><br />
-		<!--<label>wow专区(更新中)</label><br/>-->
+		<!--<label>wow专区(待定)</label><br/>
 		
 		<a href="./tools/index.html">其他工具</a>
 	</body>
